tests/models/enum/named/i128/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_length = 2)]
        value: i128
    },
}
fn main() {}
